--- a/views/chat.html
+++ b/views/chat.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 
-<!--
-	This file is rendered by express.js, when the rurl /chat/123456 is visited in a browser.
-	It includes jQuery, socket.io.js (it is automatically served by the socket.io library), 
-	and a few more JavaScript files that you should check out.
--->
-
 <html>
 
 <head>
 
-	<title>Private chat room | Tutorialzine Demo</title>
+	<title>Приватный чат</title>
 
 	<link type="text/css" rel="stylesheet" href="../css/stylesheet.css" />
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans Condensed:300italic,300,700" rel="stylesheet" type="text/css">
@@ -20,31 +14,20 @@
 
 <body>
 
-	<header class="banner">
-
-		<h1 class="bannertext">
-			<a href="http://tutorialzine.com/2014/03/nodejs-private-webchat/" id="logo">Tutorial<span>zine</span>: NODE.JS CHAT TUTORIAL</a>
-		</h1>
-
-	</header>
-
-
 	<section class="section">
-
-		<!-- These elements are displayed as white info cards in the middle of the screen -->
 
 		<div class="connected">
 
 			<img src="../img/unnamed.jpg" id="creatorImage" />
 
 			<div class="infoConnected">
-				<h2>Who are you?</h2>
+				<h2>Как Вас зовут?</h2>
 				<br/>
 
 				<form class="loginForm">
-					<input type="text" id="yourName" placeholder="Your nick name" /><br/>
-					<input type="text" id="yourEmail" placeholder="Your email address" /><br/>
-					<input type="submit" id="yourEnter" value="ENTER" />
+					<input type="text" id="yourName" placeholder="Имя" /><br/>
+					<input type="text" id="yourEmail" placeholder="Email" /><br/>
+					<input type="submit" id="yourEnter" value="ВОЙТИ" />
 				</form>
 
 			</div>
@@ -56,13 +39,13 @@
 			<img src="../img/unnamed.jpg" id="ownerImage" />
 
 			<div class="infoInside">
-				<h2>Chat with <span class="nickname-chat"></span></h2>
+				<h2>Начните чат с <span class="nickname-chat"></span></h2>
 				<br/>
 
 				<form class="loginForm">
-					<input type="text" id="hisName" placeholder="Your nick name" /><br/>
-					<input type="text" id="hisEmail" placeholder="Your email address" /><br/>
-					<input type="submit" id="hisEnter" value="CHAT" />
+					<input type="text" id="hisName" placeholder="Имя" /><br/>
+					<input type="text" id="hisEmail" placeholder="Email" /><br/>
+					<input type="submit" id="hisEnter" value="ВОЙТИ" />
 				</form>
 
 			</div>
@@ -71,8 +54,8 @@
 
 		<div class="invite-textfield">
 
-			<h2>Oops, there are no other people in this chat!</h2>
-			<h5>Invite a friend by sending them this URL</h5>
+			<h2>Ой-ой-ой, в Вашем чате еще никого нет!</h2>
+			<h5>Пригласите друга, отправив ему эту ссылку:</h5>
 
 			<div class="link">
 				<a title="Invite a friend" href="" id="link"></a>
@@ -85,16 +68,16 @@
 			<img src="../img/unnamed.jpg" id="leftImage" />
 
 			<div class="info">
-				<h2><span class="nickname-left"></span> has left this chat.</h2>
-				<h5>Invite somebody else by sending them this page.</h5>
+				<h2><span class="nickname-left"></span> вышел из чата.</h2>
+				<h5>Пригласите кого-нибудь ещё, отправив ему эту ссылку:.</h5>
 			</div>
 
 		</div>
 
 		<div class="toomanypeople">
 
-			<h2>Oops, you can not join this chat!</h2>
-			<h5>There are already two people in it. Would you like to create a <a title="New Room" href="/create" id="room">new room</a>?</h5>
+			<h2>Ой, Вы не можете сюда войти!</h2>
+			<h5>В этой комнате уже находятся два человека. Может быть, Вы хотите <a title="New Room" href="/create" id="room">создать свой чат</a>?</h5>
 
 		</div>
 
@@ -103,8 +86,8 @@
 			<img src="../img/unnamed.jpg" id="noMessagesImage" />
 
 			<div class="info">
-				<h2>You are chatting with <span class="nickname-chat"></span>.</h2>
-				<h5>Send them a message from the form below!</h5>
+				<h2>Вы находитесь в чате с <span class="nickname-chat"></span>.</h2>
+				<h5>Отправьте первое сообщение!</h5>
 			</div>
 
 		</div>
@@ -112,7 +95,7 @@
 		<div class="chatscreen">
 
 			<ul class="chats">
-				<!-- The chat messages will go here -->
+				
 			</ul>
 
 		</div>
@@ -123,8 +106,8 @@
 
 		<form id="chatform">
 
-			<textarea id="message" placeholder="Write something.."></textarea>
-			<input type="submit" id="submit" value="SEND"/>
+			<textarea id="message" placeholder="Напишите сообщение.."></textarea>
+			<input type="submit" id="submit" value="ОТПРАВИТЬ"/>
 
 		</form>
 
