Addad full Russian support

--- a/views/chat.html
+++ b/views/chat.html
@@ -69,7 +69,7 @@
 
 			<div class="info">
 				<h2><span class="nickname-left"></span> вышел из чата.</h2>
-				<h5>Пригласите кого-нибудь ещё, отправив ему эту ссылку:.</h5>
+				<h5>Пригласите кого-нибудь ещё, отправив ему ссылку текущего чата!</h5>
 			</div>
 
 		</div>
