--- a/views/home.html
+++ b/views/home.html
@@ -25,8 +25,8 @@
 
 			<a title="Create" href="/create" id="create">
 				<div id="createbutton">
-					<div id="little">Создать новый</div>
-					<div id="big">ЧАТ!</div>
+					<div id="little">Siempre listos cuando tu lo estés</div>
+					<div id="big">INICIAR CHAT!</div>
 				</div>
 			</a>
 
